--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>2026 New Year Challenge</title>
+  <title>New Year / New Me</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,12 +11,11 @@
 <header>
   <h1>New Year / New Me</h1>
   <p class="subtitle">Daily discipline. No excuses.</p>
+  <div id="streakBox">
+    <p>🔥 Current Streak: <span id="streak">0</span> days</p>
+    <p>🏆 Best Streak: <span id="bestStreak">0</span> days</p>
+  </div>
 </header>
-
-<div id="streakBox">
-  <p>🔥 Current Streak: <span id="streak">0</span> days</p>
-  <p>🏆 Best Streak: <span id="bestStreak">0</span> days</p>
-</div>
 
 <main id="checklist"></main>
 
@@ -31,24 +29,15 @@
   <button id="saveDay">✅ Complete Today</button>
 </footer>
 
+<!-- Notification Modal -->
 <div id="notifModal" class="notif-hidden">
   <div class="notif-box">
     <h2>🔔 Enable Notifications</h2>
-    <p>
-      Daily check-ins are mandatory.<br>
-      Notifications keep you accountable.
-    </p>
+    <p>Daily check-ins are mandatory. Notifications keep you accountable.</p>
     <button id="enableNotif">Enable</button>
     <button id="skipNotif">Not now</button>
   </div>
 </div>
-
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
-import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
-</script>
 
 <script src="app.js"></script>
 </body>
