--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
 <footer>
   <button id="saveDay">✅ Complete Today</button>
+  <button id="testNotif" style="margin: 20px; padding: 12px; border-radius:10px; border:none; background:#00ff88; font-weight:bold;">
+  🔔 Test Notification
+</button>
 </footer>
 
 <!-- Notification Modal -->
