--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>New Year / New Me</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,9 +27,6 @@
 
 <footer>
   <button id="saveDay">✅ Complete Today</button>
-  <button id="testNotif" style="margin: 20px; padding: 12px; border-radius:10px; border:none; background:#00ff88; font-weight:bold;">
-  🔔 Test Notification
-</button>
 </footer>
 
 <!-- Notification Modal -->
