--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>New Year / New Me</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon.png">
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+
+  <title>New Year · New Me</title>
+
+  <!-- Website favicon -->
+  <link rel="icon" href="assets/favicon.png" type="image/png" />
+
+  <!-- Apple touch icon (optional, website-safe) -->
+  <link rel="apple-touch-icon" href="assets/favicon.png" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
 <header>
